index.css
body {
    background-color: lightgrey;
    margin: 0;
}

.BG {
    background-image: linear-gradient(to bottom, black 1%, lightgrey 60%);
    position: absolute;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    z-index: -1;
}

.navbar {
    display: flex;
    justify-content: space-between;
    color: white;
    font-size: large;
    height: 4rem;
}

.lamp-image {
    width: 30rem;
    position: absolute;
    margin-left: 5rem;
    animation-name: lamp-image;
    animation-duration: 2s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    transform-origin: top center;
}

@keyframes lamp-image {
    0% {
        transform: rotate(10deg);
    }

    100% {
        transform: rotate(-10deg);
    }

}

.text-container {
    display: flex;
    height: 92vh;
    flex-direction: column;
    justify-content: center;
    margin-top: -3rem;
}

.title {
    font-size: 5rem;
    margin-right: 5rem;
    margin-bottom: 2rem;
    display: flex;
    justify-content: flex-end;
    align-content: center;
}

.sub-title {
    margin: 0rem;
    margin-right: 5rem;
    font-size: 4rem;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.About-Me {
    margin: 0rem;
    margin-right: 5rem;
    font-size: 3rem;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.My-Name {
    text-align: center;
    transition: 0.15s;
}

.My-Name:hover {
    font-size: 1.3rem;
}

.My-Job {
    margin: 0rem;
    margin-right: 5rem;
    font-size: 3rem;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    transition: 0.1s;
    font-weight: lighter;
}

.My-Job:hover {
    font-weight: bold;
}

.first-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    gap: 0.5rem;
}

.square {
    border: rgb(11, 11, 11) 5px solid;
    border-radius: 3rem;
    width: 15rem;
    font-size: 2rem;
    height: 16rem;
    align-content: center;
    padding: 0.5rem;
    position: relative;
    text-align: center;
}

.circle {
    border: rgb(0, 0, 0) 3px solid;
    border-radius: 50%;
    width: 4rem;
    height: 4rem;
    font-size: 3.5rem;
    align-content: center;
    text-align: center;
}

.second-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    gap: 0.5rem;
}

.mega-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 3rem;
    padding-bottom: 4rem;
    padding-top: 4rem;
}

.square:hover {
    animation: shake 0.5s;
    animation-iteration-count: 1;
}

@keyframes shake {
    0% {
        transform: rotate(0deg);
    }

    50% {
        transform: rotate(-10deg);
    }

    100% {
        transform: rotate(10deg);
    }
}

.small-circle {
    border: rgb(0, 0, 0) 3px solid;
    border-radius: 50%;
    width: 5rem;
    height: 5rem;
    font-size: 1.25rem;
    align-content: center;
    text-align: center;
    align-self: flex-end;
    top: 0px;
    left: 0px;
    position: absolute;
    background-color: black;
    color: white;
}


.big-text-center {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-evenly;
}

.circle-1 {
    border: rgb(0, 0, 0) 3px solid;
    border-radius: 50%;
    width: 4rem;
    height: 4rem;
    font-size: 3.5rem;
    align-content: center;
    text-align: center;
    align-self: flex-end;
}

.circle-2 {
    border: rgb(0, 0, 0) 3px solid;
    border-radius: 50%;
    width: 4rem;
    height: 4rem;
    font-size: 3.5rem;
    align-content: center;
    text-align: center;
    align-self: flex-end;
    rotate: 90deg;
}

.paragragh {
    font-size: 2rem;
    align-content: center;
    text-align: center;
    font-weight: bold;
}

@media only screen and (max-width: 600px) {

    .lamp-image {
        width: 22rem;
        margin-left: 0rem;
    }

    .mega-container {
        display: none;
    }

    .title {
        font-size: 4rem;
        margin-right: 0rem;
        margin-bottom: 12rem;
        display: flex;
        justify-content: flex-end;
        align-content: center;
        text-align: center;
    }

    .sub-title {
        margin: 0rem;
        font-size: 3rem;
    }

    .About-Me {
        font-size: 2.3rem;
        margin: 0;
    }

    .My-Name {
        text-align: center;
        transition: 0.15s;
    }

    .My-Name:hover {
        font-size: 1.3rem;
    }

    .My-Job {
        font-size: 2.2rem;
        margin: 0;
    }

    .My-Job:hover {
        font-weight: bold;
    }

    .text-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
    }



}

